src/objects/acfSuggested_Product__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>Maximum_Borrowing__c</fullName>
        <label>Maximum Borrowing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Monthly_Surplus__c</fullName>
        <label>Net Monthly Surplus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Funds_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Funds Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Funds_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Funds Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfFilter__c</fullName>
        <description>Click Loans</description>
        <label>Filter</label>
        <picklist>
            <picklistValues>
                <fullName>Include</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Suggested_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Suggested_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfProduct_Family__c</fullName>
        <description>Click Loans</description>
        <formula>Text(acfProduct__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Suggested_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Click Loans Suggested Product</label>
    <nameField>
        <displayFormat>Prod-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suggested Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>